src/main/java/com/kambr/sync/generated/SyncParser.java
// Generated from /Users/matetoth/Documents/Kambr/Antlr-corendon/grammar/Sync.g4 by ANTLR 4.8

package com.kambr.sync.generated;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class SyncParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.8", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, WORD=6, INTEGER=7, NEW_LINE=8, 
		WHITE_SPACE_SKIP=9, SEPARATOR_SKIP=10;
	public static final int
		RULE_flightRecords = 0, RULE_geniusFlight = 1, RULE_airlineCode = 2, RULE_flightNumber = 3, 
		RULE_origin = 4, RULE_destination = 5, RULE_departureDate = 6, RULE_cabin = 7, 
		RULE_viaStation = 8, RULE_chainID = 9, RULE_flightID = 10, RULE_cabinCapacity = 11, 
		RULE_cabinBooking = 12, RULE_websiteAllocated = 13, RULE_websiteBookings = 14, 
		RULE_poolCapacity = 15, RULE_poolBooked = 16, RULE_restCapacity = 17, 
		RULE_restBooked = 18, RULE_departureTime = 19, RULE_arrivalTime = 20, 
		RULE_updateIndentifier = 21, RULE_specialPriceOffers = 22, RULE_fromSeat = 23, 
		RULE_price = 24, RULE_date = 25, RULE_time = 26;
	private static String[] makeRuleNames() {
		return new String[] {
			"flightRecords", "geniusFlight", "airlineCode", "flightNumber", "origin", 
			"destination", "departureDate", "cabin", "viaStation", "chainID", "flightID", 
			"cabinCapacity", "cabinBooking", "websiteAllocated", "websiteBookings", 
			"poolCapacity", "poolBooked", "restCapacity", "restBooked", "departureTime", 
			"arrivalTime", "updateIndentifier", "specialPriceOffers", "fromSeat", 
			"price", "date", "time"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'F'", "'S;'", "'.'", "'-'", "':'", null, null, null, null, "';'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, "WORD", "INTEGER", "NEW_LINE", "WHITE_SPACE_SKIP", 
			"SEPARATOR_SKIP"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Sync.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public SyncParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class FlightRecordsContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(SyncParser.EOF, 0); }
		public List<GeniusFlightContext> geniusFlight() {
			return getRuleContexts(GeniusFlightContext.class);
		}
		public GeniusFlightContext geniusFlight(int i) {
			return getRuleContext(GeniusFlightContext.class,i);
		}
		public FlightRecordsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_flightRecords; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SyncVisitor ) return ((SyncVisitor<? extends T>)visitor).visitFlightRecords(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FlightRecordsContext flightRecords() throws RecognitionException {
		FlightRecordsContext _localctx = new FlightRecordsContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_flightRecords);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(55); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(54);
				geniusFlight();
				}
				}
				setState(57); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==T__0 );
			setState(59);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class GeniusFlightContext extends ParserRuleContext {
		public AirlineCodeContext airlineCode() {
			return getRuleContext(AirlineCodeContext.class,0);
		}
		public FlightNumberContext flightNumber() {
			return getRuleContext(FlightNumberContext.class,0);
		}
		public OriginContext origin() {
			return getRuleContext(OriginContext.class,0);
		}
		public DestinationContext destination() {
			return getRuleContext(DestinationContext.class,0);
		}
		public DepartureDateContext departureDate() {
			return getRuleContext(DepartureDateContext.class,0);
		}
		public CabinContext cabin() {
			return getRuleContext(CabinContext.class,0);
		}
		public ChainIDContext chainID() {
			return getRuleContext(ChainIDContext.class,0);
		}
		public FlightIDContext flightID() {
			return getRuleContext(FlightIDContext.class,0);
		}
		public CabinCapacityContext cabinCapacity() {
			return getRuleContext(CabinCapacityContext.class,0);
		}
		public CabinBookingContext cabinBooking() {
			return getRuleContext(CabinBookingContext.class,0);
		}
		public WebsiteAllocatedContext websiteAllocated() {
			return getRuleContext(WebsiteAllocatedContext.class,0);
		}
		public WebsiteBookingsContext websiteBookings() {
			return getRuleContext(WebsiteBookingsContext.class,0);
		}
		public PoolCapacityContext poolCapacity() {
			return getRuleContext(PoolCapacityContext.class,0);
		}
		public PoolBookedContext poolBooked() {
			return getRuleContext(PoolBookedContext.class,0);
		}
		public RestCapacityContext restCapacity() {
			return getRuleContext(RestCapacityContext.class,0);
		}
		public RestBookedContext restBooked() {
			return getRuleContext(RestBookedContext.class,0);
		}
		public DepartureTimeContext departureTime() {
			return getRuleContext(DepartureTimeContext.class,0);
		}
		public ArrivalTimeContext arrivalTime() {
			return getRuleContext(ArrivalTimeContext.class,0);
		}
		public UpdateIndentifierContext updateIndentifier() {
			return getRuleContext(UpdateIndentifierContext.class,0);
		}
		public TerminalNode NEW_LINE() { return getToken(SyncParser.NEW_LINE, 0); }
		public ViaStationContext viaStation() {
			return getRuleContext(ViaStationContext.class,0);
		}
		public List<SpecialPriceOffersContext> specialPriceOffers() {
			return getRuleContexts(SpecialPriceOffersContext.class);
		}
		public SpecialPriceOffersContext specialPriceOffers(int i) {
			return getRuleContext(SpecialPriceOffersContext.class,i);
		}
		public GeniusFlightContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_geniusFlight; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SyncVisitor ) return ((SyncVisitor<? extends T>)visitor).visitGeniusFlight(this);
			else return visitor.visitChildren(this);
		}
	}

	public final GeniusFlightContext geniusFlight() throws RecognitionException {
		GeniusFlightContext _localctx = new GeniusFlightContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_geniusFlight);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(61);
			match(T__0);
			setState(62);
			airlineCode();
			setState(63);
			flightNumber();
			setState(64);
			origin();
			setState(65);
			destination();
			setState(66);
			departureDate();
			setState(67);
			cabin();
			setState(69);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==WORD) {
				{
				setState(68);
				viaStation();
				}
			}

			setState(71);
			chainID();
			setState(72);
			flightID();
			setState(73);
			cabinCapacity();
			setState(74);
			cabinBooking();
			setState(75);
			websiteAllocated();
			setState(76);
			websiteBookings();
			setState(77);
			poolCapacity();
			setState(78);
			poolBooked();
			setState(79);
			restCapacity();
			setState(80);
			restBooked();
			setState(81);
			departureTime();
			setState(82);
			arrivalTime();
			setState(83);
			updateIndentifier();
			setState(84);
			match(NEW_LINE);
			setState(88);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__1) {
				{
				{
				setState(85);
				specialPriceOffers();
				}
				}
				setState(90);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AirlineCodeContext extends ParserRuleContext {
		public TerminalNode WORD() { return getToken(SyncParser.WORD, 0); }
		public AirlineCodeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_airlineCode; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SyncVisitor ) return ((SyncVisitor<? extends T>)visitor).visitAirlineCode(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AirlineCodeContext airlineCode() throws RecognitionException {
		AirlineCodeContext _localctx = new AirlineCodeContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_airlineCode);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(91);
			match(WORD);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FlightNumberContext extends ParserRuleContext {
		public TerminalNode INTEGER() { return getToken(SyncParser.INTEGER, 0); }
		public FlightNumberContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_flightNumber; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SyncVisitor ) return ((SyncVisitor<? extends T>)visitor).visitFlightNumber(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FlightNumberContext flightNumber() throws RecognitionException {
		FlightNumberContext _localctx = new FlightNumberContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_flightNumber);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(93);
			match(INTEGER);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class OriginContext extends ParserRuleContext {
		public TerminalNode WORD() { return getToken(SyncParser.WORD, 0); }
		public OriginContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_origin; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SyncVisitor ) return ((SyncVisitor<? extends T>)visitor).visitOrigin(this);
			else return visitor.visitChildren(this);
		}
	}

	public final OriginContext origin() throws RecognitionException {
		OriginContext _localctx = new OriginContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_origin);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(95);
			match(WORD);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DestinationContext extends ParserRuleContext {
		public TerminalNode WORD() { return getToken(SyncParser.WORD, 0); }
		public DestinationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_destination; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SyncVisitor ) return ((SyncVisitor<? extends T>)visitor).visitDestination(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DestinationContext destination() throws RecognitionException {
		DestinationContext _localctx = new DestinationContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_destination);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(97);
			match(WORD);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DepartureDateContext extends ParserRuleContext {
		public DateContext date() {
			return getRuleContext(DateContext.class,0);
		}
		public DepartureDateContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_departureDate; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SyncVisitor ) return ((SyncVisitor<? extends T>)visitor).visitDepartureDate(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DepartureDateContext departureDate() throws RecognitionException {
		DepartureDateContext _localctx = new DepartureDateContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_departureDate);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(99);
			date();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CabinContext extends ParserRuleContext {
		public TerminalNode WORD() { return getToken(SyncParser.WORD, 0); }
		public CabinContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_cabin; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SyncVisitor ) return ((SyncVisitor<? extends T>)visitor).visitCabin(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CabinContext cabin() throws RecognitionException {
		CabinContext _localctx = new CabinContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_cabin);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(101);
			match(WORD);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ViaStationContext extends ParserRuleContext {
		public TerminalNode WORD() { return getToken(SyncParser.WORD, 0); }
		public ViaStationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_viaStation; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SyncVisitor ) return ((SyncVisitor<? extends T>)visitor).visitViaStation(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ViaStationContext viaStation() throws RecognitionException {
		ViaStationContext _localctx = new ViaStationContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_viaStation);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(103);
			match(WORD);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ChainIDContext extends ParserRuleContext {
		public TerminalNode INTEGER() { return getToken(SyncParser.INTEGER, 0); }
		public ChainIDContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_chainID; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SyncVisitor ) return ((SyncVisitor<? extends T>)visitor).visitChainID(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ChainIDContext chainID() throws RecognitionException {
		ChainIDContext _localctx = new ChainIDContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_chainID);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(105);
			match(INTEGER);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FlightIDContext extends ParserRuleContext {
		public TerminalNode INTEGER() { return getToken(SyncParser.INTEGER, 0); }
		public FlightIDContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_flightID; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SyncVisitor ) return ((SyncVisitor<? extends T>)visitor).visitFlightID(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FlightIDContext flightID() throws RecognitionException {
		FlightIDContext _localctx = new FlightIDContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_flightID);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(107);
			match(INTEGER);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CabinCapacityContext extends ParserRuleContext {
		public TerminalNode INTEGER() { return getToken(SyncParser.INTEGER, 0); }
		public CabinCapacityContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_cabinCapacity; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SyncVisitor ) return ((SyncVisitor<? extends T>)visitor).visitCabinCapacity(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CabinCapacityContext cabinCapacity() throws RecognitionException {
		CabinCapacityContext _localctx = new CabinCapacityContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_cabinCapacity);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(109);
			match(INTEGER);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CabinBookingContext extends ParserRuleContext {
		public TerminalNode INTEGER() { return getToken(SyncParser.INTEGER, 0); }
		public CabinBookingContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_cabinBooking; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SyncVisitor ) return ((SyncVisitor<? extends T>)visitor).visitCabinBooking(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CabinBookingContext cabinBooking() throws RecognitionException {
		CabinBookingContext _localctx = new CabinBookingContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_cabinBooking);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(111);
			match(INTEGER);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class WebsiteAllocatedContext extends ParserRuleContext {
		public TerminalNode INTEGER() { return getToken(SyncParser.INTEGER, 0); }
		public WebsiteAllocatedContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_websiteAllocated; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SyncVisitor ) return ((SyncVisitor<? extends T>)visitor).visitWebsiteAllocated(this);
			else return visitor.visitChildren(this);
		}
	}

	public final WebsiteAllocatedContext websiteAllocated() throws RecognitionException {
		WebsiteAllocatedContext _localctx = new WebsiteAllocatedContext(_ctx, getState());
		enterRule(_localctx, 26, RULE_websiteAllocated);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(113);
			match(INTEGER);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class WebsiteBookingsContext extends ParserRuleContext {
		public TerminalNode INTEGER() { return getToken(SyncParser.INTEGER, 0); }
		public WebsiteBookingsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_websiteBookings; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SyncVisitor ) return ((SyncVisitor<? extends T>)visitor).visitWebsiteBookings(this);
			else return visitor.visitChildren(this);
		}
	}

	public final WebsiteBookingsContext websiteBookings() throws RecognitionException {
		WebsiteBookingsContext _localctx = new WebsiteBookingsContext(_ctx, getState());
		enterRule(_localctx, 28, RULE_websiteBookings);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(115);
			match(INTEGER);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PoolCapacityContext extends ParserRuleContext {
		public TerminalNode INTEGER() { return getToken(SyncParser.INTEGER, 0); }
		public PoolCapacityContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_poolCapacity; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SyncVisitor ) return ((SyncVisitor<? extends T>)visitor).visitPoolCapacity(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PoolCapacityContext poolCapacity() throws RecognitionException {
		PoolCapacityContext _localctx = new PoolCapacityContext(_ctx, getState());
		enterRule(_localctx, 30, RULE_poolCapacity);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(117);
			match(INTEGER);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PoolBookedContext extends ParserRuleContext {
		public TerminalNode INTEGER() { return getToken(SyncParser.INTEGER, 0); }
		public PoolBookedContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_poolBooked; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SyncVisitor ) return ((SyncVisitor<? extends T>)visitor).visitPoolBooked(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PoolBookedContext poolBooked() throws RecognitionException {
		PoolBookedContext _localctx = new PoolBookedContext(_ctx, getState());
		enterRule(_localctx, 32, RULE_poolBooked);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(119);
			match(INTEGER);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RestCapacityContext extends ParserRuleContext {
		public TerminalNode INTEGER() { return getToken(SyncParser.INTEGER, 0); }
		public RestCapacityContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_restCapacity; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SyncVisitor ) return ((SyncVisitor<? extends T>)visitor).visitRestCapacity(this);
			else return visitor.visitChildren(this);
		}
	}

	public final RestCapacityContext restCapacity() throws RecognitionException {
		RestCapacityContext _localctx = new RestCapacityContext(_ctx, getState());
		enterRule(_localctx, 34, RULE_restCapacity);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(121);
			match(INTEGER);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RestBookedContext extends ParserRuleContext {
		public TerminalNode INTEGER() { return getToken(SyncParser.INTEGER, 0); }
		public RestBookedContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_restBooked; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SyncVisitor ) return ((SyncVisitor<? extends T>)visitor).visitRestBooked(this);
			else return visitor.visitChildren(this);
		}
	}

	public final RestBookedContext restBooked() throws RecognitionException {
		RestBookedContext _localctx = new RestBookedContext(_ctx, getState());
		enterRule(_localctx, 36, RULE_restBooked);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(123);
			match(INTEGER);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DepartureTimeContext extends ParserRuleContext {
		public TimeContext time() {
			return getRuleContext(TimeContext.class,0);
		}
		public DepartureTimeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_departureTime; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SyncVisitor ) return ((SyncVisitor<? extends T>)visitor).visitDepartureTime(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DepartureTimeContext departureTime() throws RecognitionException {
		DepartureTimeContext _localctx = new DepartureTimeContext(_ctx, getState());
		enterRule(_localctx, 38, RULE_departureTime);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(125);
			time();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ArrivalTimeContext extends ParserRuleContext {
		public TimeContext time() {
			return getRuleContext(TimeContext.class,0);
		}
		public ArrivalTimeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_arrivalTime; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SyncVisitor ) return ((SyncVisitor<? extends T>)visitor).visitArrivalTime(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ArrivalTimeContext arrivalTime() throws RecognitionException {
		ArrivalTimeContext _localctx = new ArrivalTimeContext(_ctx, getState());
		enterRule(_localctx, 40, RULE_arrivalTime);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(127);
			time();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class UpdateIndentifierContext extends ParserRuleContext {
		public TerminalNode WORD() { return getToken(SyncParser.WORD, 0); }
		public UpdateIndentifierContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_updateIndentifier; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SyncVisitor ) return ((SyncVisitor<? extends T>)visitor).visitUpdateIndentifier(this);
			else return visitor.visitChildren(this);
		}
	}

	public final UpdateIndentifierContext updateIndentifier() throws RecognitionException {
		UpdateIndentifierContext _localctx = new UpdateIndentifierContext(_ctx, getState());
		enterRule(_localctx, 42, RULE_updateIndentifier);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(129);
			match(WORD);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
